--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "node react-native-map-web-fix.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.20",
     "@reduxjs/toolkit": "^2.2.1",
+    "@teovilla/react-native-web-maps": "^0.9.5",
     "expo": "~50.0.2",
     "expo-constants": "~15.4.5",
     "expo-status-bar": "~1.11.1",
@@ -20,7 +22,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
